# bf2-matchmaking

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  supazod.config.json  turbo.json
apps/api/: package.json  railway.toml  tsconfig.json
apps/bot/: package.json
apps/engine/: package.json  tsconfig.json
apps/legacy-engine/: package.json
apps/legacy-web/: package.json  remix.config.js
apps/live/: nodemon.json  package.json
apps/movies/: package.json
apps/new/: package.json  tailwind.config.js  tsconfig.json
apps/platform/: package.json
apps/rcon/: package.json
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
legacy-apps/legacy-bot/: README.md  package.json
legacy-apps/legacy-engine/: package.json  tsconfig.json
legacy-apps/legacy-live/: package.json
legacy-apps/legacy-platform/: package.json
legacy-apps/legacy-rcon/: nodemon.json  package.json
legacy-apps/legacy-web/: package.json  tsconfig.json
legacy-packages/demo/: package.json
rust/bf2-rest/: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.docx  README.md  bf2-api.service  config.toml  docker-compose.yml  environment  install.sh  test-api.sh
rust/bf2-rest/llm/: prd.md  spec-query.md
rust/bf2-rest/server_events/: Cargo.toml
rust/bf2-rest/server_events/src/: http_client.rs  main.rs
rust/bf2-rest/src/: main.rs
rust/bf2-rest/src/auth/: mod.rs
rust/bf2-rest/src/config/: mod.rs
rust/bf2-rest/src/handlers/: mod.rs
rust/bf2-rest/src/rcon/: mod.rs
rust/bf2-rest/src/utils/: mod.rs
scripts/: bf2server_bf2cc_install.sh  rkantos.js
(+729 files in other folders)
